--- a/src/App.scss
+++ b/src/App.scss
@@ -35,9 +35,10 @@
   padding: 2.3%;
 }
 
-.header__tap {
+.taps__tap {
   margin-right: 5%;
   cursor: pointer;
+  padding: 1.3%;
 }
 
 /* Modifiers */
