--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,13 @@
   100% { transform: rotate(360deg); }
 }
 
+.form {
+  border: 1px solid #bdbdbd;
+  border-radius: 10px;
+  padding: 3% 11%;
+  width: 120%;
+}
+
 .field-search {
   margin-top: -70px;
   float: right;
@@ -41,4 +48,25 @@
   padding: 1.3%;
 }
 
-/* Modifiers */
+.form__textfield {
+  margin: 0;
+  width: 100%;
+}
+
+.form__button {
+  margin-left: 78%;
+  color: black;
+}
+
+/******* Modifiers ******/
+.form--center-horizontally {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form--center-vertically {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
